--- a/assets/css/seun.css
+++ b/assets/css/seun.css
@@ -12,7 +12,7 @@
 }
 
 /*** New Slider **/
-
+/* 
 .slider {
   position: relative;
   height: 100vh;
@@ -362,7 +362,7 @@
   transition: transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
   transition: transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86),
     -webkit-transform 900ms cubic-bezier(0.785, 0.135, 0.15, 0.86);
-}
+} */
 
 /*** header ***/
 
@@ -470,11 +470,11 @@
 
 header {
   position: fixed;
-  top: 0;
+  top: -14px;
   left: 0;
   width: 100%;
-  padding: 0.5rem 0;
-  background: rgba(255, 255, 255, 0.92);
+  padding: 14px 0;
+  background: rgba(204, 123, 123, 0.1);
   z-index: 3;
   will-change: transform;
   transition: background 0.3s,
